Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49102

A window that is shown after a modal dialog is visible does not respect the modality of the dialog

    XMLWordPrintable

Details

    • a3d59c7c7f675b0a4e128efeb781aa1c2f7db4c0

    Description

      A window that is shown after a modal dialog is visible does not respect the modality of the dialog. Therefore it is possible to interact with the window that has just been shown even though it is not modal itself and therefore should be blocked by the modal dialog.

      Attachments

        1. qtbug49102.zip
          2 kB
        2. qtbug49102.zip
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes